Make apache redirect http -> https to fix security issue #1694\nAdd clickjacking protection to apache (issue #1696)

--- a/etc/templates/httpd/conf.d/multiproject.conf
+++ b/etc/templates/httpd/conf.d/multiproject.conf
@@ -189,6 +189,9 @@ CustomLog ${sys_logs_path}/access.log combined
     # SSL engine settings
     SSLEngine on
 
+    # Prevent clickjacking
+    Header always append X-Frame-Options SAMEORIGIN
+
     # Change the certificate paths to something else for actual sites
     SSLCertificateFile ${trac_conf_path}/${domain_name}.pem
     SSLCertificateChainFile ${trac_conf_path}/intermediate.crt
@@ -219,10 +222,14 @@ CustomLog ${sys_logs_path}/access.log combined
 #  Group of directives for port 80 (http)
 # ----------------------------------------------------------------------------------------------------------------------
 <VirtualHost *:80>
-    # Apache root directory
-    DocumentRoot ${trac_htdocs}
     # Set up the server name
     ServerName ${domain_name}
+    # Apache root directory
+    DocumentRoot ${trac_htdocs}
+		# Redirect http traffic to https
+    RewriteEngine On
+    RewriteCond %{HTTPS} off
+    RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI}
 </VirtualHost>
 
 # ----------------------------------------------------------------------------------------------------------------------
